Always use globally installed jvm, ignore JAVA_HOME