@@ -7,11 +7,7 @@ setlocal EnableDelayedExpansion EnableExtensions
 
 set JAVA_EXE=java.exe
 
-If defined JAVA_HOME (
-    set JAVA_EXE=%JAVA_HOME%\bin\%JAVA_EXE%
-) 
-
-set VM_OPTS=-Dfile.encoding=utf-8 -Xmx768m -Xverify:none -XX:+TieredCompilation -XX:TieredStopAtLevel=1
+set VM_OPTS=-Dfile.encoding=utf-8
 
 set DIR=%~dp0
 set LIBDIR=%DIR%lib
